core/src/mast/node/basic_block_node/snapshots/miden_core__mast__node__basic_block_node__tests__batch_ops_8-2.snap
---
source: core/src/mast/node/basic_block_node/tests.rs
expression: "build_group_chunks(&batches).collect::<Vec<_>>()"
---
[
    [
        Add,
        Mul,
        Add,
        Add,
        Add,
        Mul,
        Mul,
        Push(
            1,
        ),
        Noop,
    ],
    [],
    [
        Push(
            2,
        ),
    ],
    [],
]
