core/src/mast/node/basic_block_node/snapshots/miden_core__mast__node__basic_block_node__tests__batch_ops_8.snap
---
source: core/src/mast/node/basic_block_node/tests.rs
expression: batches
---
[
    OpBatch {
        ops: [
            Add,
            Mul,
            Add,
            Add,
            Add,
            Mul,
            Mul,
            Push(
                1,
            ),
            Noop,
            Push(
                2,
            ),
        ],
        indptr: [
            0,
            9,
            9,
            10,
            10,
            0,
            0,
            0,
            0,
        ],
        padding: [
            true,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
        ],
        groups: [
            51383589178741154,
            1,
            91,
            2,
            0,
            0,
            0,
            0,
        ],
        num_groups: 4,
    },
]
